--- a/service-product-management.html
+++ b/service-product-management.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Product Management - Prime</title>
-  <meta name="description" content="Product Management - service details.">
-  <meta name="keywords" content="">
+  <title>Product Management and Web Development Services | Custom Website Solutions for Businesses and Individuals | Prime</title>
+  <meta name="description" content="Explore Prime's product management services that cover the entire product lifecycle, including market research, product roadmaps, user-centric design, and successful product launches. Contact us for tailored web development solutions that enhance your business's growth!">
+  <meta name="keywords" content="product management, web development, website design, small business website, web application development, product roadmap, market research, user-centric approach, product launch, post-launch optimization, branding, marketing, collaboration with teams, web design services, web development agency, product lifecycle, user experience, custom web development, graphic design, sales support, customer support, business growth, online presence, website improvement, product development services, digital marketing, web solutions">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -78,7 +78,7 @@
     </div><!-- End Page Title -->
 
     <!-- Service Details Section -->
-    <section id="service-details" class="service-details section">
+    <div id="service-details" class="service-details section">
 
       <div class="container">
 
@@ -107,25 +107,109 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/service/service-product-management.jpg" alt="" class="img-fluid services-img">
+            <h3>Product Management</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Product management is the strategic function within a company that oversees the entire lifecycle of a product: from its
+              conception and development to its launch and beyond. At Prime, we specialize in ensuring that every product meets both
+              market needs and business goals. Our product management services are tailored to guide the creation of successful
+              products through collaboration across multiple departments, including <a href="service-web-development.html">Web Development</a>, 
+              <a href="service-web-design.html">Web Design</a>, <a href="service-branding.html">Branding</a>, and
+              <a href="service-marketing.html">Marketing</a>. We work closely with our teams in <a href="service-graphic-design.html">Graphic Design</a>, 
+              Sales, and Customer Support to deliver products that customers will love and businesses can trust. Whether it's a new “website for my business” thing, a complete branding
+              and website design overhaul, or a customized web development project, Prime is committed to delivering top-notch results
+              at every stage of product development.
             </p>
+            <h3>Key Areas of Focus in Product Management</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#market-research">Market Research</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#product-roadmap">Product Roadmap</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#collaboration-with-teams">Collaboration with Teams</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#user-centric-approach">User-Centric Approach</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#product-launch">Product Launch</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#post-launch-optimization">Post-Launch Optimization</a></span></li>
             </ul>
+            <section id="market-research" class="section">
+              <h4>Market Research</h4>
+              <p>
+                Market research is a crucial part of successful Product Management, and at Prime, we excel at gathering and analyzing
+                the insights necessary to guide your project. Our team conducts in-depth research to understand customer needs, market
+                trends, and the competitive landscape, ensuring that your product (whether it's a new small business website or a
+                comprehensive web application development project) aligns perfectly with market demands. While we handle the bulk of the
+                research, we also value input from our clients, as their unique perspectives and business insights help refine the final
+                product to better meet specific goals and customer preferences. This collaborative approach ensures your business is set
+                up for success from the very beginning.
+              </p>
+            </section>
+            <section id="product-roadmap" class="section">
+              <h4>Product Roadmap</h4>
+              <p>
+                A product roadmap is a high-level plan that outlines the vision, priorities, and progress of a product throughout its
+                lifecycle. At Prime, we craft detailed roadmaps that guide the product's journey from conception to completion,
+                incorporating client feedback and market insights. Our team uses the roadmap to align development efforts, ensuring
+                that
+                each phase, including web design, feature development, or post-launch optimization progresses smoothly. This ensures
+                we
+                meet project goals on time and allows clients to track how the product evolves, from initial web development to the
+                final release.
+              </p>
+            </section>
+            <section id="collaboration-with-teams" class="section">
+              <h4>Collaboration with Teams</h4>
+              <p>
+                Collaboration with teams is vital in ensuring the success of any product development process. We prioritize seamless
+                communication and cooperation across all departments involved, including <a href="service-web-development.html">Web
+                  Development</a>,
+                <a href="service-web-design.html">Web Design</a>, <a href="service-marketing.html">Marketing</a>, and <a
+                  href="service-branding.html">Branding</a>. This collaborative approach allows us to integrate diverse expertise at
+                each stage of the product's lifecycle,
+                ensuring that every detail aligns with the overall vision. By fostering strong teamwork and regularly consulting with
+                clients, we create a cohesive environment that ensures faster problem-solving, smoother project execution, and a final
+                product that exceeds expectations.
+              </p>
+            </section>
+            <section id="user-centric-approach" class="section">
+              <h4>User-Centric Approach</h4>
+              <p>
+                A user-centric approach is at the heart of everything we do at Prime. We focus on understanding the needs, behaviors,
+                and preferences of your target audience to ensure that every product, no matter if it's a small business website or a
+                complex web application development project, delivers an exceptional user experience. By placing users at the center
+                of
+                our web design and web development processes, we create intuitive, accessible, and engaging websites that not only
+                meet
+                functional requirements but also delight users. This approach enhances customer satisfaction, boosts engagement, and
+                drives better business outcomes, ensuring your product resonates with its intended audience.
+              </p>
+            </section>
+            <section id="product-launch" class="section">
+              <h4>Product Launch</h4>
+              <p>
+                The product launch is one of the most critical phases in the product lifecycle, as it determines the initial market
+                reception. At Prime, we meticulously plan each launch to ensure everything is in place, from website design and
+                marketing to user experience optimization. Whether introducing a fresh website solution for your small business or
+                rolling out a major web development agency project, we ensure your product makes a strong first impression. A
+                well-executed launch can drive traffic, build brand awareness, and lay the foundation for long-term success, giving
+                your
+                business the competitive edge it needs in today's digital landscape.
+              </p>
+            </section>
+            <section id="post-launch-optimization" class="section">
+              <h4>Post-Launch Optimization</h4>
+              <p>
+                Post-launch optimization is where we refine and enhance your product after it's live, ensuring it performs at its
+                best.
+                We go beyond simply delivering a product; we continuously analyze and improve it, whether it's a website for your
+                business or a complex web development project. This ongoing process includes updates to design, features, and
+                performance based on user feedback and data. By staying proactive, we help your website or application adapt to
+                changing
+                market trends, keeping it relevant, functional, and optimized for success in the long run.
+              </p>
+            </section>
+            <h3>Contact us</h3>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
-            <p>-------------</p>
-            <p>
-              Strategically driving of development, launching, support and improvement of products bring a successful result.
+              Prime offers high-quality services to help your business grow online. Whether you need a new website or want to improve
+              an existing one, our team is here to help. <a href="/#contact">Schedule a free consultation</a> today to discuss your project and receive a
+              personalized quote! We're ready to bring your ideas to life and deliver the best results for your business.
             </p>
           </div>
 
@@ -133,7 +217,9 @@
 
       </div>
 
-    </section><!-- /Service Details Section -->
+    </div><!-- /Service Details Section -->
+
+    
 
   </main>
 
