--- a/service-web-design.html
+++ b/service-web-design.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Professional Website Design and Web Development Services</title>
+  <title>Professional Website Design and Web Development Services | Prime</title>
   <meta name="description" content="Offering top-quality website design for small businesses and personal projects. Build credibility, improve SEO, and drive growth with our expert services.">
   <meta name="keywords" content="web design, website design, web development, small business website, professional web design, user-friendly websites, mobile responsive websites, SEO web design, branding, brand consistency, conversion rate optimization, custom website design, scalable web development, digital marketing, e-commerce websites, portfolio websites, service-oriented websites, nonprofit websites, online store design, wedding websites, personal blogs, family websites, pet websites, custom personal websites, personal brand websites, website development services">
 
