--- a/service-web-development.html
+++ b/service-web-development.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Comprehensive Web Development Services for Businesses and Individuals</title>
+  <title>Comprehensive Web Development Services for Businesses and Individuals | Prime</title>
   <meta name="description" content="Discover expert web development services that cater to both businesses and personal projects. From creating engaging websites to seamless web applications, we provide tailored solutions that enhance your online presence and drive success.">
   <meta name="keywords" content="web development, website design, custom web development, small business website, business website design, e-commerce platform, personal website, personal blog, responsive design, mobile-friendly website, SEO web development, online visibility, web app development, website developers, web development agency, website design company, custom websites, web design for personal use, online portfolio, community website, marketing integration, social media, professional web development, website maintenance, website updates, website traffic, online engagement, web development services">
 
