Service product management.

--- a/service-product-management.html
+++ b/service-product-management.html
@@ -122,12 +122,12 @@
             </p>
             <h3>Key Areas of Focus in Product Management</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#market-research">Market Research</a></span></li>
-              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#product-roadmap">Product Roadmap</a></span></li>
-              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#collaboration-with-teams">Collaboration with Teams</a></span></li>
-              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#user-centric-approach">User-Centric Approach</a></span></li>
-              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#product-launch">Product Launch</a></span></li>
-              <li><i class="bi bi-check-circle"></i><span><a href="service-product-management.html#post-launch-optimization">Post-Launch Optimization</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#market-research">Market Research</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#product-roadmap">Product Roadmap</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#collaboration-with-teams">Collaboration with Teams</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#user-centric-approach">User-Centric Approach</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#product-launch">Product Launch</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#post-launch-optimization">Post-Launch Optimization</a></span></li>
             </ul>
             <section id="market-research" class="section">
               <h4>Market Research</h4>
