Service graphic design.

--- a/service-graphic-design.html
+++ b/service-graphic-design.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Graphic Design - Prime</title>
-  <meta name="description" content="Graphic Design - service details.">
-  <meta name="keywords" content="">
+  <title>Graphic Design Services for Small Businesses & Individuals | Web Solutions | Prime</title>
+  <meta name="description" content="Explore professional graphic design services at Prime. Whether you need a small business website, custom branding, or a personal project, our team creates visually compelling, user-friendly designs at affordable prices. Contact us for a standout website today!">
+  <meta name="keywords" content="graphic design, visual communication, small business website, custom branding solutions, user-friendly interfaces, website design services, minimalist design, bold typography, 3D elements, vibrant colors, gradients, custom illustrations, dynamic elements, interactive design, asymmetrical layouts, retro styles, affordable graphic design, web development services, digital design trends, personalized graphics">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -87,7 +87,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h5>Serices List</h5>
               <div class="services-list">
                 <a href="service-web-design.html"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
                 <a href="service-web-development.html"><i class="bi bi-arrow-right-circle"></i><span>Web Development</span></a>
@@ -100,33 +100,130 @@
 
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-envelope-at help-icon"></i>
-              <h4>Have a Question?</h4>
+              <h5>Have a Question?</h5>
               <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@primewebpage.com">contact@primewebpage.com</a></p>
             </div>
 
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/service/service-graphic-design.jpg" alt="" class="img-fluid services-img">
+            <h3>Graphic Design</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Graphic design is an essential aspect of visual communication, combining art and technology to convey ideas and
+              messages. It does not matter if you're a small business owner looking to enhance your small business website or an
+              individual wanting to make a statement through your personal projects, effective graphic design is key to capturing
+              attention and leaving a lasting impression.
             </p>
+            <p>
+              Our company understands that visual communication goes beyond just making things look good. It’s about crafting visual
+              experiences that resonate with your target audience. From website design services to custom branding solutions, our team
+              specializes in creating visuals that align with your goals and speak directly to your audience. By incorporating
+              elements such as logos, typography, and color schemes, we ensure that your brand identity is not only communicated but
+              also visually compelling.
+            </p>
+            <p>
+              We specialize in creating user-friendly interfaces that enhance the overall experience. Our focus on intuitive design
+              ensures that visitors can easily navigate your site, whether you're looking to create a website for your business or
+              build an engaging platform for individual use. Trust <a href="/#services">our services</a> to deliver an exceptional online experience tailored
+              to your audience.
+            </p>
+            <h3>Trends in Graphic Design</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#minimalism">Minimalism</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#bold-typography">Bold Typography</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#3d-elements-and-depth">3D Elements and Depth</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#vibrant-colors-and-gradients">Vibrant Colors and Gradients</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#custom-illustrations">Custom Illustrations</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#dynamic-and-interactive-elements">Dynamic and Interactive Elements</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#asymmetrical-layouts">Asymmetrical Layouts</a></span></li>
+              <li><i class="bi bi-check-circle"></i><span><a href="#retro-and-vintage-styles">Retro and Vintage Styles</a></span></li>
             </ul>
+          <section id="minimalism" class="section">
+            <h5>Minimalism</h5>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              Minimalism emphasizes simplicity and the removal of unnecessary elements, focusing on essential features. This approach
+              leads to clean lines, ample white space, and a limited color palette, all of which contribute to a more user-friendly
+              experience. The core idea is to convey messages clearly and effectively without distractions. We can deliver
+              minimalistic graphic design solutions tailored for both business websites and individual projects.
             </p>
+          </section>
+          <section id="bold-typography" class="section">
+            <h5>Bold Typography</h5>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
+              This technique is particularly effective in drawing the viewer's eye to important messages or calls to action. By using
+              bold typefaces, our high-skilled designers can create a sense of energy and urgency, making content for a website for
+              your small business more engaging and easier to read.
             </p>
-            <p>-------------</p>
+          </section>
+          <section id="3d-elements-and-depth" class="section">
+            <h5>3D Elements and Depth</h5>
             <p>
-              High-quality graphics are an essential part of modern applications.
+              3D elements and depth in graphic design bring a dynamic and immersive experience to web projects. Incorporating 3D
+              graphics enhances the visual appeal of a business website design or any web development services, making it more
+              interactive and memorable for users. Prime integrates 3D visuals to create websites that stand out. It allows us to
+              elevate your project and provide users with a captivating interface that encourages exploration and interaction.
             </p>
+          </section>
+          <section id="vibrant-colors-and-gradients" class="section">
+            <h5>Vibrant Colors and Gradients</h5>
+            <p>
+              Vibrant colors and gradients add energy and visual interest to any project. This trend utilizes bold color palettes and
+              smooth transitions between shades to create an eye-catching aesthetic. Employing vibrant colors in the website design
+              for small businesses helps capture attention and evoke emotions, enhancing user engagement. Our team incorporates
+              vibrant gradients and colors in both web design and web development services to create visually striking and cohesive
+              websites. By embracing this trend we make a user-friendly interface that resonates with your audience, encouraging them
+              to interact with your content.
+            </p>
+          </section>
+          <section id="custom-illustrations" class="section">
+            <h5>Custom Illustrations</h5>
+            <p>
+              Custom illustrations allow brands to express their unique identity and storytelling. Unlike stock images, these
+              personalized graphics enhance a brand's authenticity and can convey complex ideas more effectively. By incorporating
+              custom illustrations into your website for a business or individual project, you create a memorable visual experience
+              that sets you apart from the competition. We specialize in integrating such unique graphics into our web design
+              services, ensuring each element aligns with your brand's personality and goals.
+            </p>
+          </section>
+          <section id="dynamic-and-interactive-elements" class="section">
+            <h5>Dynamic and Interactive Elements</h5>
+            <p>
+              Incorporating dynamic and interactive elements into graphic design is essential for creating engaging user experiences
+              on websites for small businesses and individual projects alike. Whether you're looking to create a website for your
+              business or develop a comprehensive web application, our team focuses on crafting interactive features that captivate
+              users. With our web development services, we can help you stand out in the crowded digital landscape and provide your
+              audience with a unique, immersive experience that keeps them coming back.
+            </p>
+          </section>
+          <section id="asymmetrical-layouts" class="section">
+            <h5>Asymmetrical Layouts</h5>
+            <p>
+              This design technique breaks away from traditional grid patterns, creating a more dynamic and visually engaging
+              composition. By strategically unevenly placing elements, asymmetrical designs can draw attention to key information,
+              enhance user flow, and make a business website design feel more unique and inviting. We use this trend to help your
+              brand stand out while maintaining a balance that keeps users engaged.
+            </p>
+          </section>
+          <section id="retro-and-vintage-styles" class="section">
+            <h5>Retro and Vintage Styles</h5>
+            <p>
+              Retro and vintage styles are making a significant comeback in graphic design, offering a nostalgic charm that resonates
+              with audiences. Incorporating these styles into website design for small businesses can create a warm, inviting
+              atmosphere that evokes feelings of familiarity and trust. By blending contemporary design principles with retro
+              aesthetics, we ensure that your site captures attention while remaining functional and user-friendly. We will help you
+              to create a business website design that not only reflects your brand's personality but also engages your target
+              audience effectively.
+            </p>
+          </section>
+          <h3>Contact Us</h3>
+          <p>
+            At Prime, we have the best designers in the industry, dedicated to delivering exceptional graphic design solutions
+            tailored to your unique needs. We have experience in many styles, from modern trends to classic looks, so your project
+            will stand out. We think great design should be affordable, which is why we provide our top services at a good price. If
+            you're ready to elevate your website design or graphic design project, don't hesitate to <a href="/#contact">contact us</a>. Let us help you
+            create a visually stunning and user-friendly website that truly represents your brand!
+          </p>
           </div>
 
         </div>
@@ -155,7 +252,7 @@
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Useful Links</h4>
+          <h5>Useful Links</h5>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/#about">About</a></li>
@@ -166,7 +263,7 @@
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Our Services</h4>
+          <h5>Our Services</h5>
           <ul>
             <li><a href="web-design.html">Graphic Design</a></li>
             <li><a href="web-development.html">Web Development</a></li>
@@ -177,7 +274,7 @@
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Contact Us</h4>
+          <h5>Contact Us</h5>
           <p><strong>Email:</strong> <span>contact@primewebpage.com</span></p>
         </div>
 
