--- a/service-branding.html
+++ b/service-branding.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Branding - Prime</title>
-  <meta name="description" content="Branding - service details.">
-  <meta name="keywords" content="">
+  <title>Comprehensive Branding Solutions for Small Business Websites | Prime</title>
+  <meta name="description" content="Discover how effective branding enhances your small business website. From logo design to color schemes and typography, we specialize in creating a cohesive identity. Contact us to create a website for your business that resonates with your audience!">
+  <meta name="keywords" content="branding, brand identity, logo design, color scheme development, typography selection, user-centric design, responsive design, visual storytelling, brand strategy, marketing integration, SEO optimization, web development, copywriting, small business branding, personal branding, engaging websites, professional branding, cohesive branding, brand awareness, customer trust">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -107,25 +107,54 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/service/service-branding.jpg" alt="" class="img-fluid services-img">
+            <h3>Branding</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Branding is much more than just a logo or color scheme. It includes the overall perception of a company, its values, and
+              how it communicates with its target audience. An effective branding strategy helps to build brand awareness, loyalty,
+              and trust, ultimately influencing customers' purchasing decisions. Branding is crucial not only for large corporations
+              but also for small businesses and even individuals. It builds credibility and trust with potential clients, making your
+              small business website more memorable and inviting. Even for individuals, such as freelancers or entrepreneurs,
+              effective branding on a website helps communicate your unique value and professionalism, creating a lasting impression
+              on visitors.
             </p>
+            <p>
+              At Prime, we incorporate logos, color schemes, and typography into every web page to create a cohesive and professional
+              brand identity. These elements are carefully designed to reflect your business values and appeal to your target
+              audience. Whether you're building a small business website or a personal platform, our web design services ensure that
+              your branding is seamlessly integrated, giving your site a consistent and visually appealing look.
+            </p>
+            <p>
+              We believe that branding and <a href="service-web-design.html">web design</a> are deeply interconnected. Every visual element on your website, from the color
+              schemes to the logos and typography, helps tell your brand's story and create a distinct identity. With the right
+              visuals, we create websites that connect emotionally with your audience, making them not only useful but also engaging
+              and memorable. Whether for a small business website or a personal project, consistent branding in your web design helps
+              build trust and lasting relationships with your visitors.
+            </p>
+            <p>
+              Using web content written by our professional copywriters and visuals made by our high-quality designers is a powerful
+              way to tell your brand's story. By blending engaging text with thoughtful design, you can showcase your brand's values,
+              mission, and personality. Whether it's through impactful graphics, well-placed images, or clear messaging, your website
+              can bring your brand to life
+            </p>
+            <h3>Examples of Prime's expertise in branding</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Logo Design. We create unique and memorable logos that capture the essence of a brand.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Color Scheme Development. We select effective color palettes that evoke emotions and align with brand identity.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Typography Selection. We choose fonts that enhance readability and reflect the brand’s personality.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>User-Centric Design. We craft intuitive and engaging websites that prioritize user experience.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Responsive Design. We develop websites that function seamlessly on various devices and screen sizes.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Visual Storytelling. We utilize visuals to effectively communicate brand messages and narratives.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Brand Strategy. We formulate comprehensive branding strategies that resonate with target audiences.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Marketing Integration. We ensure cohesive branding across all marketing channels and platforms.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>SEO Optimization. We implement SEO best practices to enhance online visibility and drive traffic.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Web Development. We offer full-service web development to create functional and appealing websites.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Copywriting. We write compelling and persuasive content that aligns with the brand voice and engages the audience.</span></li>
             </ul>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
-            <p>-------------</p>
-            <p>
-              Company recognition is a key part of a successful business.
+              In conclusion, anyone looking to work with Prime can rest easy knowing that we handle everything needed to create a
+              fully functional and visually appealing website. From branding to copywriting, our comprehensive services ensure that
+              your project is taken care of every step of the way. If you're ready to elevate your online presence, <a href="/#contact">contact us</a> today!
             </p>
           </div>
 
